#431 - Add Captured wind mote to items destroyed on death